objects/History__c.object
<CustomObject>
    <fields>
        <fullName>analysis_result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Analysis Result</label>
        <referenceTo>Analysis_Report__c</referenceTo>
        <relationshipLabel>Histories</relationshipLabel>
        <relationshipName>Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Histories</relationshipLabel>
        <relationshipName>Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complaint</label>
        <referenceTo>complaint__c</referenceTo>
        <relationshipLabel>Histories</relationshipLabel>
        <relationshipName>Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>field_name__c</fullName>
        <label>Field Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>new_value__c</fullName>
        <label>New Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>old_value__c</fullName>
        <label>Old Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Histories</relationshipLabel>
        <relationshipName>Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>History</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>